--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
 reqwest = "0.11"
 serde = { version = "1", features = ["derive"]}
 config = "0.11"
-uuid = { version = "0.8.1", features = ["v4"] }
+uuid = { version = "1.0.0", features = ["v4"] }
 chrono = "0.4.15"
 env_logger = "0.9"
 log = "0.4"
@@ -33,7 +33,7 @@ secrecy = { version = "0.8", features = ["serde"] }
 once_cell = "1"
 
 [dependencies.sqlx]
-version = "0.5.7"
+version = "0.6.2"
 default-features = false
 features = [
 "runtime-actix-rustls",
@@ -41,5 +41,6 @@ features = [
 "postgres",
 "uuid",
 "chrono",
-"migrate"
+"migrate",
+"offline"
 ]
