--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tracing-actix-web = "0.5"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
 reqwest = "0.11"
 serde = { version = "1", features = ["derive"]}
+serde-aux = "3"
 config = "0.11"
 uuid = { version = "1.0.0", features = ["v4"] }
 chrono = "0.4.15"
